--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         <div class="text">
           <div class="indent">
           <ol>
+            				<li>
+					<a href = "https://doi.org/10.1016/j.apal.2025.103615"> <em> Interpolation in Hájek's Basic Logics</em></a> (with W. Fussner). Annals of Pure and Applied Logic 176(9) (2025).
+                                        </li>
+
                                         <li>
                                         <a href = "https://doi.org/10.1112/blms.13228"> <em> Equational theories of idempotent semifields</em></a> (with G. Metcalfe). Bulletin of the London Mathematical Society, 57: 771-785. (2025). (<a href="https://doi.org/10.48550/arXiv.2402.09876">arXiv Preprint</a>)
                                         </li>
@@ -96,10 +100,7 @@ https://doi.org/10.48550/arXiv.2503.18660">arXiv Preprint</a>)
 </em> (with W. Fussner). Submitted. (<a href="https://doi.org/10.48550/arXiv.2407.21613">arXiv Preprint</a>)
                                         </li>
 
-            				<li>
-                                        <em> Interpolation in Hájek's Basic Logic
-</em> (with W. Fussner). Submitted. (<a href="https://doi.org/10.48550/arXiv.2403.13617">arXiv Preprint</a>)
-                                        </li>
+
                                         
                                         <li>
                                         <em> Interpolation and the Exchange Rule
@@ -121,6 +122,10 @@ https://doi.org/10.48550/arXiv.2503.18660">arXiv Preprint</a>)
         <div class="text">
         <div class="indent">
           <ol>
+                                        <li>
+                                        <em> Three Theorems on Idempotent Semifields</em>, TACL 2024, Barcelona, Spain, 2024.
+                                        </li>
+
                                         <li>
                                         <em> Three Theorems on Idempotent Semifields</em>, TACL 2024, Barcelona, Spain, 2024.
                                         </li>
