--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="indent">
           <ol>
             				<li>
-					<a href = "https://doi.org/10.1016/j.apal.2025.103615"> <em> Interpolation in Hájek's Basic Logics</em></a> (with W. Fussner). Annals of Pure and Applied Logic 176(9) (2025).
+					<a href = "https://doi.org/10.1016/j.apal.2025.103615"> <em> Interpolation in Hájek's Basic Logic</em></a> (with W. Fussner). Annals of Pure and Applied Logic 176(9) (2025).
                                         </li>
 
                                         <li>
