--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ https://doi.org/10.48550/arXiv.2503.18660">arXiv Preprint</a>)
         <div class="indent">
           <ol>
                                         <li>
-                                        <em> Three Theorems on Idempotent Semifields</em>, TACL 2024, Barcelona, Spain, 2024.
+                                        <em> Right-orders on Free Groups</em>, RAMICS 2024, Prague, Czechia, 2024.
                                         </li>
 
                                         <li>
