--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@ https://doi.org/10.48550/arXiv.2503.18660">arXiv Preprint</a>)
         <div class="indent">
           <ol>
                                         <li>
+                                        <em>Axiomatizing small varieties of periodic
+ℓ-pregroups</em>, LATD 2025, Siena, Italy, 2025.
+                                        </li>
+
+                                        <li>
                                         <em> Right-orders on Free Groups</em>, RAMICS 2024, Prague, Czechia, 2024.
                                         </li>
 
