--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@ https://doi.org/10.48550/arXiv.2503.18660">arXiv Preprint</a>)
         <div class="indent">
           <ol>
                                         <li>
+                                        <em>Amalgamation in varieties of residuated lattices</em>, Algebra Week 2025, Siena, Italy, 2025 (Invited talk).
+                                        </li>
+
+                                        <li>
                                         <em>Axiomatizing small varieties of periodic
 ℓ-pregroups</em>, LATD 2025, Siena, Italy, 2025.
                                         </li>
