--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                         </li>
                                         
                                         <li>
-                                        <a href="https://doi.org/10.1145/3680284"> <em>Interpolation in Linear Logic and Related Systems</em></a> (with W. Fussner). ACM Transactions on Computational Logic, 25, 4, Article 20, (2024). 
+                                        <a href="https://doi.org/10.1145/3680284"> <em>Interpolation in Linear Logic and Related Systems</em></a> (with W. Fussner). ACM Transactions on Computational Logic, 25, 4, Article 20, (2024). (<a href="https://doi.org/10.48550/arXiv.2305.05051">arXiv Preprint</a>)
                                         </li>
           
                                         <li>
