--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
         <div class="text">
           <div class="indent">
           <ol>
-            				<li>
+                        				        <li>
+                                        <a href = "https://doi.org/10.1007/s11225-025-10206-9"> <em> Amalgamation in Semilinear Residuated Lattices
+</em></a> (with W. Fussner). Studia Logica (2025).
+                                        </li>
+
+            				                    <li>
 					<a href = "https://doi.org/10.1016/j.apal.2025.103615"> <em> Interpolation in Hájek's Basic Logic</em></a> (with W. Fussner). Annals of Pure and Applied Logic 176(9) (2025).
                                         </li>
 
@@ -95,10 +100,7 @@ https://doi.org/10.48550/arXiv.2503.18660">arXiv Preprint</a>)
 </em> (with W. Fussner and B. Sierra Miranda). (<a href="https://doi.org/10.48550/arXiv.2501.18231">arXiv Preprint</a>)
                                         </li>
 
-            				<li>
-                                        <em> Amalgamation in Semilinear Residuated Lattices
-</em> (with W. Fussner). Submitted. (<a href="https://doi.org/10.48550/arXiv.2407.21613">arXiv Preprint</a>)
-                                        </li>
+
 
 
                                         
