--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
           <div class="indent">
           <ol>
                         				        <li>
+                                        <a href = "https://doi.org/10.1016/j.jalgebra.2025.10.012"> <em> Axiomatizing small varieties of periodic ℓ-pregroups
+</em></a> (with N. Galatos). Journal of Algebra (2025).
+                                        </li>
+
+                        				        <li>
                                         <a href = "https://doi.org/10.1007/s11225-025-10206-9"> <em> Amalgamation in Semilinear Residuated Lattices
 </em></a> (with W. Fussner). Studia Logica (2025).
                                         </li>
@@ -86,24 +91,16 @@
           <div class="indent">
             <ol>
                                         <li>
-                                        <em> Residuated lattices do not have the amalgamation property </em> (with P. Jipsen). (<a href=" 	
+                                        <em> Residuated lattices do not have the amalgamation property </em> (with P. Jipsen). Submitted. (<a href=" 	
 https://doi.org/10.48550/arXiv.2504.16111">arXiv Preprint</a>)
                                         </li>
 
-                                        <li>
-                                        <em> Axiomatizing small varieties of periodic l-pregroups </em> (with N. Galatos). Submitted. (<a href=" 	
-https://doi.org/10.48550/arXiv.2503.18660">arXiv Preprint</a>)
-                                        </li>
-
-            				<li>
+                                       
+            				                    <li>
                                         <em> Algebraic Proof Theory for Infinitary Action Logic
 </em> (with W. Fussner and B. Sierra Miranda). (<a href="https://doi.org/10.48550/arXiv.2501.18231">arXiv Preprint</a>)
                                         </li>
 
-
-
-
-                                        
                                         <li>
                                         <em> Interpolation and the Exchange Rule
 </em> (with W. Fussner and G. Metcalfe). Submitted. (<a href="https://doi.org/10.48550/arXiv.2310.14953">arXiv Preprint</a>)
